public/assets/master.css
/* ... */
.mobile-alignment-30px {
    margin-left: 0px;
    margin-right: 0px;
} 

.mobile-alignment-30px2 {
    margin-left: 0px;
    margin-right: 0px;
    margin-bottom: 68px
} 

.center-spectacular {
    display: flex;
    justify-content: center;
    align-content: center;
    margin-top: 20px;
    margin-bottom: 68px;
    margin-left: 243px;
    margin-right: 242px;
    text-align: left;
    flex-direction: column;
    align-items: center;
    width: 100%;
}
.center-spectacularr {
    display: none;
}

.center-innovation {
    display: flex;
    justify-content: center;
    align-content: center;
    margin-bottom: 68px;
    text-align: center;
    flex-direction: column;
    align-items: center;
}

.one-stop {
    display: flex;
    justify-content: center;
    align-content: center;
    margin-top: 40px;
    margin-bottom: 168px;
    margin-left: 243px;
    margin-right: 242px;
    flex-direction: column;
    align-items: center;
}

.ourservice {
    color: #FFF;
    text-align: center;
    font-family: SF Pro Text;
    font-size: 66px;
    font-style: normal;
    font-weight: 500;
    line-height: 48px; /* 72.727% */
    margin-bottom: 38px;
}

.service-image {
    width: 100%;
}
/* .lightning-fast {
    background: linear-gradient(114deg, #BD00FF 0%, #0047FF 100%);
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    font-family: SF Pro Text;
    font-size: 24px;
    font-style: normal;
    font-weight: 700;
    line-height: 40px;
}

.loading-time {
    background: linear-gradient(128deg, #BD00FF 0%, #0047FF 100%);
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    font-family: SF Pro Text;
    font-size: 24px;
    font-style: normal;
    font-weight: 700;
    line-height: 40px;
} */

.unleash {
    color: #FFF;
    text-align: center;
    font-family: SF Pro Text;
    font-size: 32px;
    font-style: normal;
    font-weight: 300;
    line-height: 45px; /* 133.333% */
    width: 980px;
    height: 118px;
    margin-top: 68px;
}

.development {
    width: 100%;
    height: 624px;
    margin-top: 90px;
    /* display: flex; */
}

.dev-row1 {
    display: flex;
    flex-wrap: wrap;
    gap: 11px;
}

.dev-row2 {
    display: flex;
}

.software {
    width: 300px;
    height: 275px;
    display: flex;
    flex-direction: column;
    justify-content: center;
}
.website {
    width: 300px;
    height: 275px;
}

.mobile { 
    width: 300px;
    height: 275px;
}

.pos { 
    width: 300px;
    height: 275px;
}

.expert { 
    width: 339px;
    height: 275px;
}

.support { 
    width: 300px;
    height: 275px;
}

.software-row1 {
    display: flex;
    align-items: center;
    gap: 16px;
}

@media screen and (max-width: 1093px) {
    /* .software {
    margin-left: -300px;
    }
    .website {
    margin-left: -300px;
    }
    .mobile {
    margin-left: -300px;
    }
    .expert {
    margin-left: -300px;
    }
    .pos {
    margin-left: -300px;
    }
    .support {
    margin-left: -300px;
    } */
    .software-col1 img{
        width: 60px;
        height: 60px;
    }
    .website-col4 img{
        width: 100px;
        margin-right: 20px;
    }
    .mobile-col4 img{
        width: 100px;
        margin-right: 20px;
    }
    .pos-col4 img{
        width: 100px;
        margin-right: 20px;

    }
    .support-col4 img{
        width: 100px;
        margin-right: 20px;
    }
    .software-row1 {
        display: flex;
        align-items: center;
        justify-content: flex-start;
        gap: 26px;
    }
    .software-row2 {
        display: flex;
        align-items: center;
        /* margin-left: -90px; */
        width: 100%;
    }
    .website-row3 {
        display: flex;
        align-items: center;
        margin-left: -90px;
    }
    .website-row4 {
        display: flex;
        align-items: center;
        margin-left: -90px;
    }
    .mobile-row3 {
        display: flex;
        align-items: center;
        margin-left: -90px;
    }
    .mobile-row4 {
        display: flex;
        align-items: center;
        margin-left: -90px;
    }
    .pos-row3 {
        display: flex;
        align-items: center;
        justify-content: center;
        /* margin-left: -90px; */
    }
    .pos-row4 {
        display: flex;
        align-items: center;
    }
    .support-row-3 {
        display: flex;
        align-items: center;
        margin-left: -90px;
    }
    .support-row-4 {
        display: flex;
        align-items: center;
        margin-left: -90px;
    }
}

.software-row2 {
    display: flex;
    align-items: center;
}

.website-row3 {
    display: flex;
    align-items: center;
}

.website-row4 {
    display: flex;
    align-items: center;
}

.mobile-row3 {
    display: flex;
    align-items: center;
}

.mobile-row4 {
    display: flex;
    align-items: center;
}

.pos-row3 {
    position: relative;
    display: flex;
    align-items: center;
}

.pos-row4 {
    display: flex;
    align-items: center;
}

.expert-row3 {
    display: flex;
    align-items: center;
}

.expert-row4 {
    display: flex;
    align-items: center;
}

.support-row-3 {
    display: flex;
    align-items: center;
}

.support-row-4 {
    display: flex;
    align-items: center;
}

.software-p {
    width: 176px;
    height: 56px;
    color: #FFF;
    font-family: SF Pro Text;
    font-size: 20px;
    font-style: normal;
    font-weight: 400;
    text-align: left;
    line-height: 22px; /* 112% */
    margin: 0px;
}

.website-p {
    width: 176px;
    height: 56px;
    color: #FFF;
    font-family: SF Pro Text;
    font-size: 20px;
    font-style: normal;
    font-weight: 400;
    text-align: left;
    line-height: 22px; /* 112% */
    margin-left: 18px;
}
/* ... */

